# libhyscangtk

./: CMakeLists.txt  translate.sh
hyscangtk/: CMakeLists.txt  hyscan-cell-renderer-pixbuf.c  hyscan-cell-renderer-pixbuf.h  hyscan-colormap-spec.c  hyscan-colormap-spec.h  hyscan-gtk-automover.c  hyscan-gtk-automover.h  hyscan-gtk-colorizer.c  hyscan-gtk-colorizer.h  hyscan-gtk-connector.c  hyscan-gtk-connector.h  hyscan-gtk-datetime.c  hyscan-gtk-datetime.h  hyscan-gtk-device-auto.c  hyscan-gtk-device-auto.h  hyscan-gtk-device-manual.c  hyscan-gtk-device-manual.h  hyscan-gtk-gen-control.c  hyscan-gtk-gen-control.h  hyscan-gtk-leveller.c  hyscan-gtk-leveller.h  hyscan-gtk-mark-editor.c  hyscan-gtk-mark-editor.h  hyscan-gtk-marshallers.list  hyscan-gtk-pane.c  hyscan-gtk-pane.h  hyscan-gtk-paned.c  hyscan-gtk-paned.h  hyscan-gtk-param-box.c  hyscan-gtk-param-box.h  hyscan-gtk-param-cc.c  hyscan-gtk-param-cc.h  hyscan-gtk-param-key.c  hyscan-gtk-param-key.h  hyscan-gtk-param-list.c  hyscan-gtk-param-list.h  hyscan-gtk-param-merge.c  hyscan-gtk-param-merge.h  hyscan-gtk-param-tree.c  hyscan-gtk-param-tree.h  (+45 more)
misc/locale/ru/LC_MESSAGES/: hyscangtk.mo
po/: hyscangtk.pot
po/ru/: hyscangtk.po
resources/: #hyscan-gtk-profile-editor-hw-device2.ui#  #hyscan-gtk-profile-editor-hw2.ui#  CMakeLists.txt  Unsaved 1.glade  Unsaved 1.glade~  hyscan-gtk-automover.ui  hyscan-gtk-colorizer.ui  hyscan-gtk-datetime.ui  hyscan-gtk-datetime.ui~  hyscan-gtk-device-auto.ui  hyscan-gtk-device-manual.ui  hyscan-gtk-gen-control.ui  hyscan-gtk-leveller.ui  hyscan-gtk-mark-editor.ui  hyscan-gtk-player.ui  hyscan-gtk-profile-db-editor.ui  hyscan-gtk-profile-db-editor.ui~  hyscan-gtk-profile-editor-db.ui  hyscan-gtk-profile-editor-hw-2.ui  hyscan-gtk-profile-editor-hw-device.ui  hyscan-gtk-profile-editor-hw.ui  hyscan-gtk-profile-editor-hw.ui~  hyscan-gtk-profile-editor-offset-page.ui  hyscan-gtk-profile-editor-offset.ui  hyscan-gtk-profile-offset-editor.ui  hyscan-gtk-project-viewer.ui  hyscan-gtk-recorder.ui  hyscan-gtk-scaler.ui  hyscan-gtk-sensor-control.ui  hyscan-gtk-start.ui  hyscan-gtk-start.ui~  hyscan-gtk-templates.xml  hyscan-gtk-tvg-control.ui
startup/: #hyscan-start.glade#
tests/: CMakeLists.txt  gtk-connector-test.c  gtk-datetime-test.c  gtk-pane-test.c  gtk-paned-test.c  gtk-param-merge-test.c  gtk-param-test.c  hyscan-gtk-views-test.c  sonar.xml
